--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@1,6..12,300&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="./src/assets/images/logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>ImpactFood</title>
   </head>
   <body>
     <div id="root"></div>
